(fix) O3-4924: Align expand animation and size prop with Carbon design system (#1758)

--- a/packages/framework/esm-styleguide/src/datepicker/datepicker.module.scss
+++ b/packages/framework/esm-styleguide/src/datepicker/datepicker.module.scss
@@ -114,6 +114,14 @@
   block-size: layout.$spacing-08;
 }
 
+.inputWrapperSm {
+  block-size: layout.$spacing-07;
+}
+
+.inputWrapperLg {
+  block-size: layout.$spacing-09;
+}
+
 // Range date picker inputs
 .inputsWrapper {
   display: flex;
@@ -121,6 +129,18 @@
   max-width: 15rem;
   margin-inline-start: 1rem;
   inline-size: 15rem;
+}
+
+.inputsWrapperSm {
+  block-size: layout.$spacing-07;
+}
+
+.inputsWrapperMd {
+  block-size: layout.$spacing-08;
+}
+
+.inputsWrapperLg {
+  block-size: layout.$spacing-09;
 }
 
 .dateInputWrapper {
@@ -154,20 +174,31 @@
 }
 
 // Used for calendar pop-over
-@keyframes fade-in-down {
+@keyframes expand-in {
   from {
     opacity: 0;
-    transform: translate3d(0, -20px, 0);
+    transform: scale(0.93);
   }
 
   to {
     opacity: 1;
-    transform: translate3d(0, 0, 0);
+    transform: scale(1);
   }
 }
 
+.popover {
+  transform-origin: top center;
+}
+
+// When the popover flips above the trigger (near bottom of viewport), anchor from the bottom
+.popover[data-placement='top'],
+.popover[data-placement='top-start'],
+.popover[data-placement='top-end'] {
+  transform-origin: bottom center;
+}
+
 .popover[data-entering] {
-  animation: fade-in-down motion.$duration-fast-02 motion.motion(entrance, productive);
+  animation: expand-in motion.$duration-fast-02 motion.motion(entrance, productive);
 
   @media screen and (prefers-reduced-motion: reduce) {
     animation: none;
@@ -221,6 +252,16 @@
 .flatButtonMd {
   height: layout.$spacing-08;
   width: layout.$spacing-08;
+}
+
+.flatButtonSm {
+  height: layout.$spacing-07;
+  width: layout.$spacing-07;
+}
+
+.flatButtonLg {
+  height: layout.$spacing-09;
+  width: layout.$spacing-09;
 }
 
 .monthYear {
